[package]
name = "actiserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
base64 = "0.13.1"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.25"
hmac-sha256 = "1.1.5"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
rsa = "0.7.2"
rustypub = { git = "https://github.com/hachyserve/rustypub" }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
simple_test_case = "1.1.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
hyper = "0.14.23"
tower = "0.4.13"
